Center aligning FAQ and fixing multiple NU TEK bug

--- a/src/components/faq/styles/faq.scss
+++ b/src/components/faq/styles/faq.scss
@@ -4,7 +4,6 @@
     align-content: center;
     margin-top: 30px;
     flex-direction: column;
-    width: 50%;
 
     &Item {
         display: flex;
@@ -15,15 +14,22 @@
         margin-bottom: 40px;
     }
 
+    &Cards {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
     &Question {
         font-size: 50px;
-        width: fit-content;
-        padding: 0px 40px;
+        text-align: center;
         margin-bottom: 10px;
         border-bottom: 5px solid #F3B136;
     }
 
     &Answer {
         font-size: 25px;
+        text-align: center;
     }
 }
